added code for simulation

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/logic.js"></script>
+
 </head>
 <body>
 
 <nav class="navbar navbar-inverse">
   <p class="navbar-text">GRE SPEED SIMULATION</p>
+  <ul class="nav nav-pills" role="tablist" style="text-align: right;margin-right: 40px;">
+              <!-- <li><a href="#" onClick="previousQuestion()">Previous</a></li> -->
+              <!-- <li><a href="#" onClick="nextQuestion()">Next</a></li>     --> 
+
+              <button type="button" onClick="startSpeedSimulation()" class="btn btn-success">Start</button>
+              <button type="button" onClick="stopSpeedSimulation()" class="btn btn-default">Stop</button>
+              <button type="button" onClick="restartSpeedSimulation()" class="btn btn-warning">Restart</button>
+              <button type="button" onClick="nextQuestion()" class="btn btn-primary">Next</button>
+
+             <!--  <li><a href="#" onClick="readingCompLayout()">RC Layout</a></li>  -->
+            </ul>
 </nav>
 
 <div class="container">
@@ -21,18 +34,34 @@
     
     <tbody>
       <tr>
-        <td>Row 1</td>
+
+        <td>
+            <h3 id="question-num">1</h3>
+
+
+        </td>
       </tr>
       <tr>
-        <td>Row 2</td>
+
+        <td class="rc-column" id="rc_column1">
+
+          <img id="myRCImg" src="" alt="" width="100%" height="100%">
+
+        </td>
+
+        <td id="rc_column2">
+
+          <div class="item">
+              <img id="myImg" src="" alt="" width="100%" height="100%">
+          </div>
+
+        </td>
+
       </tr>
     </tbody>
   </table>
 
-  <ul class="nav nav-pills" role="tablist">
-    <li><a href="#">Previous</a></li>
-    <li><a href="#">Next</a></li>       
-  </ul>
+
 
 
   </div>
