added blank image file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               <ul class="dropdown-menu" id="backList">
                   <li><a href="#">Back 1</a></li>
                   <li><a href="#">Back 5</a></li>
+                  <li><a href="#">Back 10</a></li>
               </ul>
             </div>
 
