--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="padding-top: 20px;">
   <p class="navbar-text">GRE SPEED SIMULATION</p>
 
               
